<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="email">Email</string>
    <string name="add_deal">Add Deal</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="or_sign_in_with">Or Sign in With</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="las_vegas">Las Vegas</string>
    <string name="las_vegas_holiday_resort">Las vegas holiday resort</string>
    <string name="_5000">5000</string>
    <string name="todo">TODO</string>
    <string name="place">Place</string>
    <string name="deals">Deals</string>
    <string name="search">Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save">Save</string>
    <string name="sign_up_failed">Failed to sign up</string>
    <string name="image_upload_failed">Failed to upload image</string>
</resources>
